--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.security.user.name=test
 spring.security.user.password=123456
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.mvc.path-match.matching-strategy=ant-path-matcher
+server.error.include-exception=false
+server.error.include-message=always
