implementando tratamento de erros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.security.user.password=123456
 spring.mvc.path-match.matching-strategy=ant-path-matcher
 server.error.include-exception=false
 server.error.include-message=always
+server.error.include-stacktrace=never
