--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.security.user.name=test
+spring.security.user.name=user
 spring.security.user.password=123456
+spring.security.user.roles=manager
 spring.mvc.path-match.matching-strategy=ant-path-matcher
 server.error.include-exception=false
 server.error.include-message=always
 server.error.include-stacktrace=never
+spring-doc.show-login-endpoint=true
